# Varnish-Least-Busy-Director

./: .gitignore
varnish-cache/include/: vrt.h
varnish-cache/lib/libvcl/: Makefile.am  vcc_backend.c  vcc_compile.h  vcc_dir_least_busy.c  vcc_fixed_token.c  vcc_gen_fixed_token.tcl
varnish-doc/en/inside-varnish/: article.xml
varnish-doc/en/varnish-architecture/: article.xml
varnish-doc/share/: docbook-html.css  docbook-html.xsl  docbook-xml.css
varnish-logo/icon/: varnish-icon.xcf
varnish-logo/logo/: varnish-logo.xcf
varnish-tools/autobuild/: autobuild.sh  mksummary.pl
varnish-tools/emacs/: vcl-mode.el
varnish-tools/fetcher/: Makefile  fetcher.c  fetcher.pl
varnish-tools/licensify/: licensify.pl
varnish-tools/munin/: Makefile.am  README  autogen.sh  configure.ac  varnish_  varnish_cachehitratio  varnish_hitrate  varnish_munin_plugin.pl
varnish-tools/perl/Varnish-API/: API.xs  Changes  MANIFEST  Makefile  Makefile.PL  README
varnish-tools/recursor/: recursor.pl
varnish-tools/regress/: MANIFEST  Makefile.PL  README  TODO  test1  varnish-regress.pl
varnish-tools/regress/doc/: structure.dia
varnish-tools/webgui/: README  create_db_data.pl  example.conf  start.pl  varnish-webui.pl  varnish_webgui.sql
varnish-tools/webgui/Varnish/: DB.pm  DB_Data.pm  Group.pm  Management.pm  Node.pm  NodeManager.pm  RequestHandler.pm  Statistics.pm  Util.pm
varnish-tools/webgui/css/: web.css
varnish-tools/webgui/templates/: .master.tmpl.swp  access_denied.tmpl  configure_parameters.tmpl  edit_vcl.tmpl  (+5 more)
varnish-tools/webmin/: module.info  varnish_vcl.cgi
(+42 files in other folders)
