# $Id$

AC_PREREQ(2.59)
AC_COPYRIGHT([Copyright (c) 2007-2009 Linpro AS / Verdens Gang AS])
AC_REVISION([$Id$])
AC_INIT([Varnish Munin plugin], [trunk], [varnish-dev@projects.linpro.no])
AC_CONFIG_SRCDIR(varnish_munin_plugin.pl)

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE

AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_CHECK_PROGS(PERL, [perl])
AC_CHECK_PROGS(VARNISHSTAT, [varnishstat])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
